Change history
--------------

Release Candidate 3
===================

- Applied Lee Henson's patch adding the 'onCreateAdvice'
  to PrototypeWebValidator

- Applied Chris Ortman's patch fixing MR-235
  "Allow overriding of select generation in FormHelper"

- Added Item(string id) overload to Checkboxlist
  Used to generate a checkbox with the specified id. Useful to label for='id' constructions

- Added the Expect property to the ARDataBindAttr. Now it will clear the collections 
  that are declared as expected, if not can be found on the resquest params. (MR-163)
	 

- Applied Colin Ramsay's patch fixing MR-232
  "HtmlHelper.InputButton should create <button> not <input type="button">"

- Fixed MR-228
  "incorrect component configuration results in an 'The container seems to be unavailable 
   in your HttpApplication subclass' exception"

- Applied Bart Reyserhove's patch fixing MR-226 
  "ARDataBinder has problems when using generic collections"

- Applied Jacob Lewallen's patch adding a new attribute (ViewComponentAttribute) used
  to name view components. The behavior is changed to strip the 'Component' suffix from the class name as well.

- Applied Ernst Naezer's patch fixing MR-191
  "Add TransformFilter support to MR"

- Applied Lee Henson's patch fixing MR-222
  "Use of IRailsEngineContext.Items"

- Fixed MR-224
  "ARDataBindAttribute does not set the Controllers validator on it's DataBinder"

- Fixed MR-219
  "FormHelper.Select with an interface datasource throws an Object mismatch exception."

- Applied chris ortman's patch fixing MR-188
  "Allow the #component directive to support variables for the component name"

- Fixed MR-208
  "Using a lazy loaded nested object, "Ambiguous match found" exception occures when 
   trying to use FormHelper to render control for the nested objects property."

- Applied goodwill's patch fixing MR-213
  "DiggStylePagination has a typo which prevents the code from build"

- Applied Edward Kreis' patch fixing MR-214