@@ -63,19 +63,17 @@ namespace Castle.MonoRail.Framework.Services
 		/// <returns></returns>
 		public IResource Create(ResourceDescriptor descriptor, Assembly appAssembly)
 		{
-			Assembly resAssembly = ResolveAssembly(descriptor.AssemblyName, appAssembly);
-			CultureInfo culture = ResolveCulture(descriptor.CultureName);
+			Assembly assembly = this.ResolveAssembly(descriptor.AssemblyName, appAssembly);
+			CultureInfo cultureInfo = this.ResolveCulture(descriptor.CultureName);
 
 			if (logger.IsDebugEnabled)
 			{
 				logger.DebugFormat("Creating resource name {0}, assembly {1}, resource {2}", 
 				                   descriptor.Name, descriptor.AssemblyName, descriptor.ResourceName);
 			}
-			
-			ResourceManager rm = new ResourceManager(descriptor.ResourceName, 
-			                                         resAssembly, descriptor.ResourceType);
 
-			return new ResourceFacade(rm.GetResourceSet(culture, true, true));
+			ResourceManager manager = new ResourceManager(descriptor.ResourceName, assembly, descriptor.ResourceType);
+			return new ResourceFacade(manager, cultureInfo);
 		}
 
 		/// <summary>
